@@ -1,5 +1,11 @@
 2012-10-17  Jan Kratochvil  <jan.kratochvil@redhat.com>
 
+	* dwfl_module_getdwarf.c (mod_verify_build_id): New function with code
+	from ...
+	(__libdwfl_getelf): ... here.  Call it.
+
+2012-10-17  Jan Kratochvil  <jan.kratochvil@redhat.com>
+
 	* libdwfl.h (dwfl_module_getelf): Add __nonnull_attribute__.
 
 2012-10-10  Jan Kratochvil  <jan.kratochvil@redhat.com>
